# interview_questions

./: LICENSE.txt  README.md  pyproject.toml
src/pyinterview/: __about__.py  app.py
tests/: __init__.py
